docs: Fix gap between sidebar items

--- a/docs/assets/styles/sidebar.css
+++ b/docs/assets/styles/sidebar.css
@@ -21,7 +21,6 @@ body {
 .sidebar ul {
   display: flex;
   flex-direction: column;
-  gap: 4px;
   list-style: none;
   margin: 0px;
   padding: 0px;
